Fixed checkbox svg bug on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ button:focus {
 }
 
 .suggest:hover p {
-  transform: scale(1.05);
+  transform: scale(1.02);
   transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
@@ -760,7 +760,22 @@ button:focus {
 }
 
 .checkbox-active {
-  animation: opacity-fade-in 0.25s;
+  animation: opacity-fade-in 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transform: scale(0);
+  backface-visibility: hidden;
+  animation-fill-mode: forwards;
+}
+
+@keyframes opacity-fade-in {
+  0% {
+    transform: scale(0);
+  }
+  95% {
+    transform: scale(1.07);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .genre-tag {
@@ -898,6 +913,10 @@ button:focus {
   display: grid;
   width: 100%;
   grid-template-columns: 1fr 1fr;
+}
+
+.text-input-container {
+  cursor: text !important;
 }
 
 .text-input-box {
@@ -1148,18 +1167,19 @@ input:focus {
   opacity: 0;
   transition: opacity 1000ms;
 }
-@keyframes opacity-fade-in {
-  0% {
-    opacity: 0;
-    height: 0px;
-  }
-  90% {
-    height: 24px;
-  }
-  100% {
-    height: 24px;
-    opacity: 1;
-  }
+
+/* SVG */
+.st0 {
+  fill: none;
+}
+.st1 {
+  fill: #6565c4;
+}
+.st2 {
+  fill: none;
+  stroke: #363540;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
 }
 
 @keyframes fade-in {
